# initrfs

./: .gitignore  CMakeLists.txt  Makefile  Makefile.part  README.md  configure  meson.build  meson_options.txt  mkinitramfs
include/: _NULL.h  _size_t.h  _ssize_t.h  _uint8_t.h  ctype.h  dirent.h  err.h  errno.h  fcntl.h  meson.build  stdarg.h  stdbool.h  stddef.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  time.h  unistd.h
include/_/: uint8_t.h
include/sys/: mman.h  mount.h  reboot.h
initramfs/: Makefile  candidates
src/: candidate.c  candidate.h  early_io.c  early_io.h  filesystem.c  main.c  partition.c  partition.h
src/init/: candidate.c  configuration.c  configuration.h  filesystem.h  kernelcmdline.c  kernelcmdline.h  main.c  meson.build  mountutils.c  mountutils.h  switchroot.c  switchroot.h  trimstr.h
src/libinitcrt/: crt0.x86_64.s  ctype.c  dirent.c  err.c  errno.c  meson.build  stdio.c  stdlib.c  string.c  syscalls.x86_64.s  unistd.c
src/libinitcrt/sys/: mount.c
src/libinitcrt/x86_64/: crt0.s  syscalls.s
src/mkinitrfs/: main.c  meson.build
test/: CMakeLists.txt  candidates  meson.build  test.c
test/support/: boot.c
test/support/test-init/: main.c
test/support/test-rootfs/boot/: config.sys
test/tools/: mksysroot
tools/: mkinitramfs
